# librarium

./: .dockerignore  .gitignore  Dockerfile  Pipfile  db.sqlite3  pyproject.toml
auth/: urls.py  views.py
auth_app/: urls.py  views.py
bookshelves/: admin.py  models.py
bookshelves/migrations/: 0001_initial.py
bookstore/: admin.py  models.py  serializers.py  urls.py  views.py
bookstore/migrations/: 0001_initial.py  0002_auto_20211216_1838.py  0002_auto_20220402_1820.py  0003_section.py  0004_auto_20220423_1216.py  0005_auto_20220423_1232.py  0006_book_cover.py  0007_book_free_copies_number.py  0008_booksection_number.py  0009_alter_booksection_number.py  0010_auto_20220424_1831.py  0011_remove_book_dt_release.py  0012_bookreadingrecord.py  0013_alter_bookreadingrecord_unique_together.py  0014_delete_bookreadingrecord.py
profiles/: admin.py  library_urls.py  models.py  serializers.py  urls.py  users_urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_user.py  0002_libraryrecord.py  0002_user_books.py  0003_libraryrecord_dt_return.py
project_root/: settings.py  urls.py
project_root/swagger/: urls.py
