[tool.poetry]
name = "librarium"
version = "0.1.0"
description = ""
authors = ["Alexander Munz <a_munz@list.ru>"]

[tool.poetry.dependencies]
python = "3.7.13"
django = "~=3.2"
python-dotenv = "*"
djangorestframework = "*"
django-oauth-toolkit = "*"
django-cors-headers = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
