[tool.poetry]
name = "librarium"
version = "0.1.0"
description = ""
authors = ["Alexander Munz <a_munz@list.ru>"]

[tool.poetry.dependencies]
python = "3.7.*"
django = "3.2.13"
python-dotenv = "0.20.0"
djangorestframework = "3.13.1"
django-oauth-toolkit = "1.7.1"
django-cors-headers = "3.11.0"
drf-spectacular = "0.22.0"
drf-spectacular-sidecar = "2022.4.1"
Pillow = "9.0.1"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
ipython = "*"
pytest = "7.1.2"
pytest-django = "4.5.2"
pytest-mock = "3.7.0"
pytest-cov = "3.0.0"
pytest-factoryboy = "2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project_root.settings"
